@@ -2,6 +2,8 @@
 v6.1.0-git
 ----------
 
+[mms] Disable mailbox sorting by default if the remote server does not natively
+      support it (Bug #12001).
 [mms] Add the 'msg_filter' hook.
 [mms] Added the 'attach_body_check' hook.
 [mms] Add linked attachment information directly to main body text.
